--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Flatiron Task Lister</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
@@ -12,12 +14,22 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+      <input type="text" id="dueDate" name="dueDate" placeholder="Due date">
+      <select name="Priority" id="priority">
+        <option value="red">High Priority</option>
+        <option value="yellow">Medium</option>
+        <option value="green">Low</option>
+      </select>
+      <input type="submit" id="submitForm" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos</h2>
-      <ul id="tasks">
+      <ul id="tasksR">
+      </ul>
+      <ul id="tasksY">
+      </ul>
+      <ul id="tasksG">
       </ul>
     </div>
 
@@ -25,4 +37,5 @@
   </div>
 
 </body>
+
 </html>
